--- a/GoClimbApp/Templates/MyCommunity.html
+++ b/GoClimbApp/Templates/MyCommunity.html
@@ -23,6 +23,10 @@
     <link rel="stylesheet" href="{% static 'css/jquery.fancybox.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/YouTubePopUp.css' %}">
     <style>
+        body {
+            padding-left: 10px
+        }
+
         .post-frame {
           height: 300px;
           width: 500px;
@@ -32,6 +36,11 @@
           border-color: black;
           margin: 5px
         }
+
+        .page-container {
+            margin-left: 10%;
+        }
+
     </style>
 </head>
 
@@ -43,21 +52,39 @@
         <div>
             <form method="POST" action="MyCommunity/create">
                 {% csrf_token %}
-                <textarea style="background-color: rgb(151, 151, 243) ;" id="message" placeholder="Massege" name="message" rows="4" cols="50"></textarea>
+                <input type="text" name="title">
+                <textarea style="background-color: rgb(151, 151, 243) ;" id="message" placeholder="Message" name="message" rows="4" cols="50"></textarea>
                 <br>
                 <input type="submit" value="     Post    " style="background-color:#f84c24; ">
             </form>
         </div>
         <br><br><br>
-        <ul>
-            {% for post in posts %}
-                <img src="{% static 'images/ID.png' %}" style="width: 30px; height: 30px;" alt="" />
-                <li><div class="post-frame">{{post.text}}</div></li>
-                <a href=""><img style="width: 15px; height: 15px; margin-left: 20%;" src="{% static 'images/heart.png' %}" alt="" /></a>
-            {% endfor %}
-        </ul>
-        <div class="about-image">
 
+        <div class="post-container">
+            <ul>
+                {% for post in posts %}
+                    <img src="{% static 'images/ID.png' %}" style="width: 30px; height: 30px;" alt="" />
+                    <li><div class="post-frame">{{post.text}}</div></li>
+                    <a href=""><img style="width: 15px; height: 15px; margin-left: 20%;" src="{% static 'images/heart.png' %}" alt="" /></a>
+                {% endfor %}
+            </ul>
+            <div class="about-image">
+            </div>
+        </div>
+        
+        <div class="page-container">
+            {% if posts.has_previous %}
+                <a href="?page=1">First</a>
+                <a href="?page={{ posts.previous_page_number }}">Previous</a> 
+            {% endif %}
+                {{ posts.number }}
+            {% if posts.has_next %}
+                <a href="?page={{ posts.next_page_number }}">Next</a> 
+                <a href="?page={{ posts.paginator.num_pages }}" >Last</a>
+            {% endif %}
+        </div>
+            <br/>
+        
         </div>
     </div>
 
