Revert "Update home.html"
This reverts commit 9ee4a1261a42c01a2919c64f3ce9e159a6bc780e.

--- a/GoClimbApp/Templates/home.html
+++ b/GoClimbApp/Templates/home.html
@@ -26,9 +26,7 @@
 
 <body>
     <div class="about-image">
-        <a href="{% url 'home' %}"> <img src="{% static 'images/ID.png' %}" style="width: 96px; height: 96px;" alt="" />Hello, {{request.user}}!</a>
-        <span><a href="{% url 'logout' %}"> Logout </a></span>
-
+        <a href="{% url 'home' %}"> <img src="{% static 'images/ID.png' %}" style="width: 96px; height: 96px;" alt="" />Customer ID</a>
     </div>
     <section class="about">
         <div class="container">
