--- a/GoClimbApp/Templates/Crags.html
+++ b/GoClimbApp/Templates/Crags.html
@@ -45,7 +45,11 @@
         }
     </script>
     <br><br>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
+    <div class="map-container">
+
+      <div id="map-route"></div>
+
+    </div>
     <div style="text-align:right ;">
         <img src="{% static 'images\cloud (1).png' %}" alt="" style="width:50px;height:50px; margin-right: 5%;">
         <img src="{% static 'images\sun.png' %}" alt="" style="width:50px;height:50px;margin-right: 5%;">
