--- a/GoClimbApp/Templates/signUp.html
+++ b/GoClimbApp/Templates/signUp.html
@@ -77,9 +77,19 @@
         </div>
     </section>
 
+    <script src="{% static 'signIn/js/jquery.min.js' %}"></script>
+    <script src="{% static 'signIn/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'signIn/js/owl-carousel/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'signIn/js/owl-carousel/highlight.js' %}"></script>
+    <script src="{% static 'signIn/js/owl-carousel/app.js' %}"></script>
+    <script src="{% static 'signIn/js/jquery.fancybox.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'signIn/js/YouTubePopUp.jquery.js' %}"></script>
+
+
 
 	<script>
-		/* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
+						/* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
+		//We start indexing at one because CSRF_token is considered and input field
 		 */
 
 		//Query All input fields
