--- a/GoClimbApp/Templates/signUp.html
+++ b/GoClimbApp/Templates/signUp.html
@@ -29,23 +29,23 @@
             <div class="row justify-content-center">
                 <div class="col-md-6 col-lg-4">
                     <div class="login-wrap p-0">
-
-                        <form method= "POST" action="#" class="signin-form">
-				{%csrf_token %}
-				<! this token allows Django to handle the data upon submission>
-
+                        <form method= "POST" action="">
+                            {%csrf_token %}
+                            <! this token allows Django to handle the data upon submission>
+                        
+                        
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Username" required>
+                                {{form.username}}
                             </div>
                             <div class="form-group">
-                                <input type="email" class="form-control" placeholder="Email" required>
+                                {{form.email}}
                             </div>
                             <div class="form-group">
-                                <input id="password-field" type="password" class="form-control" placeholder="Password" required>
+                                {{form.password1}}
                                 <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
                             </div>
                             <div class="form-group">
-                                <input id="password-field" type="password" class="form-control" placeholder="Confirm Password" required>
+                                {{form.password2}}
                                 <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
                             </div>
                             <div class="form-group">
@@ -54,15 +54,17 @@
                             <div class="form-group d-md-flex">
                                 <div class="w-50">
                                     <label class="checkbox-wrap checkbox-primary">Remember Me
-									  <input type="checkbox" checked>
-									  <span class="checkmark"></span>
-									</label>
+                                      <input type="checkbox" checked>
+                                      <span class="checkmark"></span>
+                                    </label>
                                 </div>
                                 <div class="w-50 text-md-right">
                                     <a href="#" style="color: #fff">Forgot Password</a>
                                 </div>
                             </div>
                         </form>
+                        
+                        {{form.errors}}
                         <div class="w-100 text-center">
                             <button style="background-color:#F04C26 ;border-radius: 10px; "> <a href="{% url 'signIn' %}" style="color: #000;"> <b> Sign In</b> </a> </button>
 
@@ -85,20 +87,19 @@
 
 
 	<script>
-						/* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
-		//We start indexing at one because CSRF_token is considered and input field
-		 */
-
-		//Query All input fields
 		var form_fields = document.getElementsByTagName('input')
-		form_fields[1].placeholder='Username..';
-		form_fields[2].placeholder='Email..';
-		form_fields[3].placeholder='Enter password...';
-		form_fields[4].placeholder='Re-enter Password...';
-
-
 		for (var field in form_fields){
-			form_fields[field].className += ' form-control'
+			form_fields[field].className += 'form-control'
+            fieldName =''
+            if(field==1)
+                fieldName = 'Username'
+            if(field==2)
+                fieldName = 'Email'
+            if(field==3)
+                fieldName = 'Password'
+            if(field==4)
+                fieldName = 'Confirm Password'
+            form_fields[field].placeholder = fieldName
 		}
 	</script>
 </body>
