--- a/GoClimbApp/Templates/MyCommunity.html
+++ b/GoClimbApp/Templates/MyCommunity.html
@@ -46,8 +46,8 @@
 
 <body>
     <div>
-        <div class="about-image">
-            <a href="{% url 'home' %}"> <img src="{% static 'images/ID.png' %}" style="width: 96px; height: 96px;" alt="" />Customer ID</a>
+        <div>
+            {%include "UserPanel.html" with user=request.user %}
         </div>
         <div>
             <form method="POST" action="">
