--- a/GoClimbApp/Templates/Crags.html
+++ b/GoClimbApp/Templates/Crags.html
@@ -25,8 +25,8 @@
 </head>
 
 <body>
-    <div class="about-image">
-        <a href="{% url 'home' %}"> <img src="{% static 'images/ID.png' %}" style="width: 96px; height: 96px;" alt="" />Customer ID</a>
+    <div>
+        {%include "UserPanel.html" with user=request.user %}
     </div>
     <div class="form-group">
         <input type="text" class="form-control" placeholder="Location" required>
