--- a/GoClimbApp/Templates/UserPanel.html
+++ b/GoClimbApp/Templates/UserPanel.html
@@ -1,5 +1,5 @@
 {% load static %}
-
+{% load panelTags %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -7,6 +7,9 @@
     <body>
         <div class="about-image">
             <a href="{% url 'Settings' %}"> <img src="{% static 'images/ID.png' %}" style="width: 96px; height: 96px;" alt="" />Hello, {{user}}!</a>
+            <br>
+            <span>{% getLevel user %}</span>
+            <br>
             <span><a href="{% url 'logout' %}"> Logout </a></span>
         </div>
     </body>
