Squashed commit of the following:
commit 80babb93ce1d11439b2c02e69c184bb2754bdf94
Author: Neil <subhx1908@gmail.com>
Date:   Thu Sep 1 17:03:31 2022 +1000

    Linked Profile with My Community Posts

commit 3b637bc3200faffe3019b8dcd81be9b37d0c2ed2
Author: Neil <subhx1908@gmail.com>
Date:   Thu Sep 1 16:49:40 2022 +1000

    Added Level to UserPanel

commit 1ebb55eebc4ed502bf56c284a778b2d32845a8e2
Author: Neil <subhx1908@gmail.com>
Date:   Thu Sep 1 16:05:01 2022 +1000

    Added UserPanel functionality

commit a96104dfd68f799adf1c7a86d5d0e40b5b4da608
Author: Neil <subhx1908@gmail.com>
Date:   Thu Sep 1 15:50:45 2022 +1000

    Added Feature: User Profile Creation on SignUp

commit bb370709de4be9ed497d153db7ee0b6273027589
Author: Neil <subhx1908@gmail.com>
Date:   Thu Sep 1 15:01:30 2022 +1000

    Update forms.py

commit 8c8721934a03dc3e0bdea4e6b25fa9bf7828f6a7
Author: Neil <subhx1908@gmail.com>
Date:   Thu Sep 1 15:01:19 2022 +1000

    Updated .gitignore

commit cc2f582995a225c7dd5b5864b4546f779a17fe5a
Author: Neil <subhx1908@gmail.com>
Date:   Thu Sep 1 15:01:04 2022 +1000

    Added Profile Model

commit 0720f65ee8109abf8429a1020e3df941287bf36b
Author: Neil <subhx1908@gmail.com>
Date:   Thu Sep 1 14:55:07 2022 +1000

    Altered DB to MySQL

--- a/GoClimbApp/Templates/UserPanel.html
+++ b/GoClimbApp/Templates/UserPanel.html
@@ -1,10 +1,15 @@
+{% load static %}
+{% load panelTags %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
     </head>
     <body>
         <div class="about-image">
-            <a href="{% url 'home' %}"> <img src="{% static 'images/ID.png' %}" style="width: 96px; height: 96px;" alt="" />Hello, {{request.user}}!</a>
+            <a href="{% url 'Settings' %}"> <img src="{% static 'images/ID.png' %}" style="width: 96px; height: 96px;" alt="" />Hello, {{user}}!</a>
+            <br>
+            <span>{% getLevel user %}</span>
+            <br>
             <span><a href="{% url 'logout' %}"> Logout </a></span>
         </div>
     </body>
