--- a/GoClimbApp/Templates/Crags.html
+++ b/GoClimbApp/Templates/Crags.html
@@ -1,4 +1,9 @@
 {% load static %}
+{% block extend_head %}
+
+<script src='https://www.google.com/recaptcha/api.js?render={{recaptcha_site_key}}'></script>
+
+{% endblock %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -25,29 +30,29 @@
 </head>
 
 <body>
-    <div class="about-image">
-        <a href="{% url 'home' %}"> <img src="{% static 'images/ID.png' %}" style="width: 96px; height: 96px;" alt="" />Customer ID</a>
-    </div>
-    <div class="form-group">
-        <input type="text" class="form-control" placeholder="Location" required>
-    </div>
 
+  {% block content %}
 
-    <div id="googleMap" style="width:100%;height:600px;"></div>
-
-    <script>
-        function myMap() {
-            var mapProp = {
-                center: new google.maps.LatLng(51.508742, -0.120850),
-                zoom: 5,
-            };
-            var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
-        }
-    </script>
-    <br><br>
-    <div class="map-container">
-
-      <div id="map-route"></div>
+  <h3>Django Google Maps API Demo - Routing</h3>
+  
+  <div class="container">
+  
+     <label for="id-google-address-a">Start Address</label>
+     <input type="text" placeholder="*Begin typing address" id="id-google-address-a" name="google_address_a">
+  
+     <label for="id-google-address-b">Destination Address</label>
+     <input type="text" placeholder="*Begin typing address" id="id-google-address-b" name="google_address_b">
+  
+  
+     <input type="hidden" class="geo" id="id-lat-a" value="">
+     <input type="hidden" class="geo" id="id-long-a" value="">
+     <input type="hidden" class="geo" id="id-lat-b" value="">
+     <input type="hidden" class="geo" id="id-long-b" value="">
+  
+  
+  </div>
+  
+  {% endblock %}
 
     </div>
     <div style="text-align:right ;">
@@ -63,6 +68,19 @@
     <script src="{% static 'js/owl-carousel/app.js' %}"></script>
     <script src="{% static 'js/jquery.fancybox.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/YouTubePopUp.jquery.js' %}"></script>
+    {% block extend_footer %}
+
+
+    <script type="text/javascript">
+    
+        var google_api_key = "{{google_api_key|safe}}";
+    
+      </script>
+    
+      <script src="{% static 'google_places.js' %}"></script>
+    
+    
+    {% endblock %}
 </body>
 
 </html>
