--- a/GoClimbApp/Templates/Crags.html
+++ b/GoClimbApp/Templates/Crags.html
@@ -29,24 +29,41 @@
         <a href="{% url 'home' %}"> <img src="{% static 'images/ID.png' %}" style="width: 96px; height: 96px;" alt="" />Customer ID</a>
     </div>
     <div class="form-group">
-        <input type="text" class="form-control" placeholder="Location" required>
+    <input list="crags" type="text" id='location_name' class="form-control" placeholder="Location"/></label>
+    <datalist id="crags">
+      <option value="Mt Keira">
+    </datalist>
+      <button id='btn'>Search</button>
     </div>
     <button> <a href="{% url 'Crags1' %}" style="color:black;">Next</a></button>
 
     <div id="googleMap" style="width:100%;height:600px;"></div>
-
-
-  
-    
     <script>
-        function myMap() {
+      function myMap() {
+        let btn = document.getElementById("btn");
+        btn.addEventListener('click', event => {
+          let location_name = document.getElementById('location_name'); 
+          console.log(location_name.value);
+          console.log('here');
+          if (location_name.value === 'Mt Keira'){
             var mapProp = {
-                center: new google.maps.LatLng(51.508742, -0.120850),
-                zoom: 5,
+              center: new google.maps.LatLng(-34.402798882401214, 150.85642735920308),
+              zoom: 14,
+              
             };
             var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
-        }
-    </script>
+            // The marker, positioned at Uluru
+          const marker = new google.maps.Marker({
+            position: new google.maps.LatLng(-34.402798882401214, 150.85642735920308),
+            map: map,
+          });
+          }
+          
+        });
+      }
+  </script>
+  <br><br>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeg0ZHofiqvXoMg6yAZtZEYJBSj0Xukzw&callback=myMap"></
     <br><br><br><br><br>
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
