--- a/GoClimbApp/Templates/Crags1.html
+++ b/GoClimbApp/Templates/Crags1.html
@@ -32,21 +32,26 @@
         <input type="text" class="form-control" placeholder="Location" required>
     </div>
 
-
-    <div id="googleMap" style="width:100%;height:600px;"></div>
-
+    <div id="googleMap" onLoad="myMap()" style="width:100%;height:600px;"></div>
     <script>
-        function myMap() {
-            var mapProp = {
-                center: new google.maps.LatLng(51.508742, -0.120850),
-                zoom: 5,
-            };
-            var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
-        }
-    </script>
+      function myMap() {
+        let location_name = document.getElementById('location_name'); 
+        var mapProp = {
+          center: new google.maps.LatLng(-34.402798882401214, 150.85642735920308),
+          zoom: 14,
+          
+        };
+        var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
+        // The marker, positioned at Uluru
+      const marker = new google.maps.Marker({
+        position: new google.maps.LatLng(-34.402798882401214, 150.85642735920308),
+        map: map,
+      });
+      }
+  </script>
     <br><br>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
-    <div style="text-align:right ;">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeg0ZHofiqvXoMg6yAZtZEYJBSj0Xukzw&callback=myMap"></
+      <div style="text-align:right ;">
         <img src="{% static 'images\cloud (1).png' %}" alt="" style="width:50px;height:50px; margin-right: 5%;">
         <img src="{% static 'images\sun.png' %}" alt="" style="width:50px;height:50px;margin-right: 5%;">
         <img src="{% static 'images\storm.png' %}" alt="" style="width:50px;height:50px;margin-right: 5%;">
