--- a/GoClimbApp/Templates/Crags1.html
+++ b/GoClimbApp/Templates/Crags1.html
@@ -22,6 +22,16 @@
     <link rel="stylesheet" href="{% static 'css/owl-carousel/owl.theme.default.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/jquery.fancybox.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/YouTubePopUp.css' %}">
+
+
+    
+    <!-- cerulean template -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.3/cerulean/bootstrap.min.css"
+    integrity="sha512-dQLT/B7byn2LjN/DN4zeBKpwGV6qbidV0XiMRWQOL7TGrV7FkZFldkGG+DGMU+CQnMTcRZlUI7GMWt1j6akNew=="
+    crossorigin="anonymous" />
+
+
+
 </head>
 
 <body>
@@ -61,17 +71,19 @@
  
   <br> <br>
 
-
+  <div class="row">
       <div class="col d-flex justify-content-center">
         <div class=" card text-white bg-light mb-6">
         <div class=" card-body">
           <h4><span class="badge badge-primary">Temperature in Celsius :</span> {{temp}}</h4>
+          <h4><span class="badge badge-primary">Rain :</span> {{rain}}</h4>
           <h4><span class="badge badge-primary">Pressure :</span> {{pressure}} </h4>
           <h4><span class="badge badge-primary">Humidity : </span> {{humidity}}</h4>
           <h4><span class="badge badge-primary">Forecast : </span> {{main}} <img
               src="http://openweathermap.org/img/w/{{icon}}.png" alt="Image" style="width:70px"></h4>
           <h4><span class="badge badge-primary">Description : </span> {{description}}</h4>
           <h4><span class="badge badge-primary">Wind Speed :</span> {{wind}}</h4>
+          <h4><span class="badge badge-primary">Wind Warning :</span> {{windWarning}}</h4>
 
 
         </div>
