--- a/GoClimbApp/Templates/Crags1.html
+++ b/GoClimbApp/Templates/Crags1.html
@@ -76,15 +76,14 @@
         <div class=" card text-white bg-light mb-6">
         <div class=" card-body">
           <h4><span class="badge badge-primary">Temperature in Celsius :</span> {{temp}}</h4>
-          <h4><span class="badge badge-primary">Rain :</span> {{rain}}</h4>
           <h4><span class="badge badge-primary">Pressure :</span> {{pressure}} </h4>
           <h4><span class="badge badge-primary">Humidity : </span> {{humidity}}</h4>
           <h4><span class="badge badge-primary">Forecast : </span> {{main}} <img
               src="http://openweathermap.org/img/w/{{icon}}.png" alt="Image" style="width:70px"></h4>
           <h4><span class="badge badge-primary">Description : </span> {{description}}</h4>
           <h4><span class="badge badge-primary">Wind Speed :</span> {{wind}}</h4>
-          <h4><span class="badge badge-primary">Wind Warning :</span> {{windWarning}}</h4>
-
+          <h4><span class="badge badge-primary">Wind Hazard! :</span> {{windWarning}}</h4>
+          <h4><span class="badge badge-primary">Rain Hazard! :</span> {{rainWarning}}</h4>
 
         </div>
 
