--- a/GoClimbApp/Templates/Crags1.html
+++ b/GoClimbApp/Templates/Crags1.html
@@ -26,13 +26,13 @@
 
 <body>
     <div>
-        {%include "UserPanel.html" with user=request.user %}
+        {%include "UserPanel.html" with user=request.user%}
     </div>
     <div class="form-group">
         <input type="text" class="form-control" placeholder="Location" required>
     </div>
 
-    <div id="googleMap" onLoad="myMap()" style="width:100%;height:600px;"></div>
+    <div id="googleMap" onLoad="myMap()" style="width:100%;height:450px;"></div>
     <script>
       function myMap() {
         let location_name = document.getElementById('location_name'); 
@@ -50,7 +50,16 @@
       }
   </script>
     <br><br>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeg0ZHofiqvXoMg6yAZtZEYJBSj0Xukzw&callback=myMap"></
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeg0ZHofiqvXoMg6yAZtZEYJBSj0Xukzw&callback=myMap"></script>
+    <div>
+    <table>
+        <tr>
+          <td><img style="padding:20px ;" src="{% static 'images\warning.png' %}" alt="warning" ></td>
+          <td style="padding:10px;text-align:center;background-color: black;color: #f04c26;margin:auto;border-radius: 15px;"><h3> Potential Hazard of <br> landslide and muddy tracks <br> due to 60% rain. </h3></td>
+        </tr>
+      </table>
+   </div>
+<br><br>
       <div style="text-align:right ;">
         <img src="{% static 'images\cloud (1).png' %}" alt="" style="width:50px;height:50px; margin-right: 5%;">
         <img src="{% static 'images\sun.png' %}" alt="" style="width:50px;height:50px;margin-right: 5%;">
