--- a/GoClimbApp/Templates/Crags2.html
+++ b/GoClimbApp/Templates/Crags2.html
@@ -17,56 +17,76 @@
     <!-- For Font style -->
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
     <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700,800" rel="stylesheet">
-    <!-- Owl Stylesheets -->
-    <link rel="stylesheet" href="{% static 'css/owl-carousel/owl.carousel.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/owl-carousel/owl.theme.default.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/jquery.fancybox.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/YouTubePopUp.css' %}">
+    <style>
+
+        #specifyColor {
+            accent-color: #f04c26;;
+        }
+    
+    </style>
+
 </head>
 
 <body>
     <div class="about-image">
         <a href="{% url 'home' %}"> <img src="{% static 'images/ID.png' %}" style="width: 96px; height: 96px;" alt="" />Customer ID</a>
     </div>
-    <div class="about-image"style="text-align:center" >
-        <a> <img src="{% static 'images/placeholder.png' %}" style="width: 40px; height: 40px;" alt="" /> <b style="font-size: large;">Mt. Keira </b></a>
-    </div>
+
   
 </div>
 <br><br>
+<div style="text-align:center ;" >
+  <img style="width:10%; height: 15%;" src="{% static 'images/placeholder.png' %}"> <b style="font-size:25px ;">Mt.keira - West Face</b>
+</div>
+<br>
 
-<div style="width:auto;height: auto;text-align: center;"><img src="{% static 'images/cragMoun.jpg' %}"> </div><br><br>
+<div style="text-align:center ;"><img src="{% static 'images/mountFront.png' %}"> </div><br>
 
-<div class="container" style="padding-left:5% ;">
-    <div class="dropdown">
-      <button style="width: 100%;height: auto; background-color: #f04c26;" class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"><b style="font-size:30px;">Climb Type</b>
-      <span ></span></button>
+<div>
+    <div style=" padding-left: 10%;padding-right: 10%;  text-align: center;" >
+      <button style="width:auto;height: auto; background-color: #f04c26;" class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"><b style="font-size:30px;">Pick your Climb Type</b></button>
+    </div>
+
+    <div>
+      <h1 style="background-color: #aaaaa4; text-align: center;" ><b style="font-size:18px;">Rating</b></h1>
+      <div style="text-align:center;font-size:20px;">
+        <input  type="radio" id="specifyColor" name="rating"  value="2+">
+          <label for="">2+</label>&emsp;&emsp;&emsp;
+          <input type="radio" id="specifyColor" name="rating"  value="3+">
+          <label for="">3+</label>&emsp;&emsp;&emsp;
+          <input type="radio" id="specifyColor" name="rating"  value="4+">
+          <label for="">4+&emsp;&emsp;&emsp;
+     </div>
+    </div>
+    <div>
+      <h1 style="background-color: #aaaaa4; text-align: center;" ><b style="font-size:18px;">Grade</b></h1>
+      <div style="text-align:center;font-size:20px;">
+          <input  type="radio" id="specifyColor" name="grade" value="15+">
+          <label for="">15+</label>&emsp;&emsp;&emsp;
+          <input type="radio" id="specifyColor" name="grade" value="20+">
+          <label for="">20+</label>&emsp;&emsp;&emsp;
+          <input type="radio" id="specifyColor" name="grade" value="25+">
+          <label for="">25+&emsp;&emsp;&emsp;
+     </div>
     </div>
   </div>
-  <div style="font-size:20px;padding:5%;">
-    <form action="/action_page.php">
-      <table style="width:100% ;">
-        <tr > <td style="border:1px solid black;"> <br> &emsp; <input type="checkbox" id="select1" name="options" value="">
-        <label for="select1">&ensp; Has been climbed before &ensp; &ensp;</label> <br> &emsp;<br></td></tr>
-        <tr> <td style="border:1px solid black;"><br> &emsp;<input type="checkbox" id="select2" name="options" value="">
-        <label for="select2">&ensp; Top roped</label><br> &emsp; <br></td></tr>
-        <tr> <td style="border:1px solid black;"><br> &emsp;<input type="checkbox" id="select3" name="options" value="">
-        <label for="select3">&ensp; Green Pointed</label><br>&emsp; <br></td></tr>
-        <tr> <td style="border:1px solid black;"><br> &emsp;<input type="checkbox" id="select4" name="options" value="">
-        <label for="select4">&ensp; Trad</label><br> &emsp; <br></td></tr>
-        <tr> <td style="border:1px solid black;"><br> &emsp;<input type="checkbox" id="select5" name="options" value="">
-        <label for="select5">&ensp; Boulder</label><br> &emsp; <br></td></tr>
-      </table>
-      </form>
+  <div>
+    <h1 style="background-color: #aaaaa4; text-align: center;" ><b style="font-size:18px;">Rope Length</b></h1>
+    <div style="text-align:center;font-size:20px;">
+        <input  type="radio" id="specifyColor" name="Rope Length"   value="Less than 25 m">
+        <label for="">Less than 25 m</label>&emsp;&emsp;&emsp;
+        <input type="radio" id="specifyColor" name="Rope Length"  value="More than 25 m">
+        <label for="">More than 25 m</label>&emsp;&emsp;&emsp;
+   </div>
+  </div>
+  <div style="text-align: center;">
+  <button style="background-color: #0d80a6;width: 40%;height:40px ; border-radius: 10px;" > <a href="{% url 'Crags3' %}"><b style="color: white;font-size: medium;">Go &nbsp;</b></a></button>
   </div>
 
 
-  <div style="text-align: right;">
-  <button style="background-color: #f04c26;width: 30%;height:40px ; border-radius: 25px;" > <a href="{% url 'Crags3' %}"><b style="color: white;font-size: medium;">Go &nbsp; -></b></a></button>
-  </div>
-
-
-    <br><br><br><br><br>
+    <br><br><br>
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/owl-carousel/owl.carousel.min.js' %}"></script>
