--- a/GoClimbApp/Templates/MyCommunity.html
+++ b/GoClimbApp/Templates/MyCommunity.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load panelTags %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -65,11 +66,8 @@
                 {% for post in posts %}
                     <img src="{% static 'images/ID.png' %}" style="width: 30px; height: 30px;" alt="" />
                     <li><div class="post-frame">{{post.text}}</div></li>
-                    <a href="/likePost?id={{post.time}}">
-                        {% if getLiked request.user post %}
-                        <img style="width: 15px; height: 15px; margin-left: 20%;" src="{% static 'images/heart.png' %}" alt="" />
-                        {% else %}
-                        <img style="width: 15px; height: 15px; margin-left: 20%;" src="{% static 'images/heart-empty.png' %}" alt="" />
+                    <a href="/likePost?id={{post.id}}">
+                        <img id="likeImage" style="width: 15px; height: 15px; margin-left: 20%;" src="{% getLiked request.user post %}" alt="" />
                     </a>
 
                 {% endfor %}
@@ -93,10 +91,6 @@
         
         </div>
     </div>
-
-
-
-
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/owl-carousel/owl.carousel.min.js' %}"></script>
