Added search count

--- a/GoClimbApp/Templates/Crags3.html
+++ b/GoClimbApp/Templates/Crags3.html
@@ -36,7 +36,7 @@
 </div>
 <br><br>
 <div style="text-align:center ;" >
-    <button style="padding:10px;text-align:center;background-color:  #f04c26;color:black;margin:auto;border-radius: 15px;"><b>We have found 2 crags that <br> match your search !</b></button>
+    <button style="padding:10px;text-align:center;background-color:  #f04c26;color:black;margin:auto;border-radius: 15px;"><b>We have found {{length}} crags that <br> match your search !</b></button>
 </div>
 <br>
     <div style="text-align:center ;">
@@ -61,7 +61,7 @@
 <b>Rating:              <b>{{route.rating}}</b><br>
 <b>Length:              <b>{{route.length}}</b><br>
 <b>Ascents:             <b>{{route.ascents}}</b><br>
-<b>First Ascent:        <b>{{route.FirstAscent}}</b><br>
+<b>First Ascent:        <b>{{route.firstAscent}}</b><br>
 {% endfor %}
 
 <div style="text-align: center;">
