Added route images to DB

--- a/GoClimbApp/Templates/Crags3.html
+++ b/GoClimbApp/Templates/Crags3.html
@@ -53,6 +53,7 @@
 </p>
 </div>
 {% for route in routes %}
+<img src="{%static route.image %}" style="width: 96px; height: 96px;" alt="" />
 <b>Destination name:    <b>{{route.name}}</b><br>
 <b>Crag name:           <b>{{route.name}}</b><br>
 <b>Grade:               <b>{{route.grade}}</b><br>
