--- a/GoClimbApp/Templates/Crags5.html
+++ b/GoClimbApp/Templates/Crags5.html
@@ -44,9 +44,9 @@
       &nbsp;<button style="width: auto;height: auto; background-color: #f04c26;" class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"><b style="font-size:30px;">Climb Grade &nbsp;</b> 
       <span style="font-size:30px;" class="caret"></span></button>
       <ul style="width: 100%;height: auto;" class="dropdown-menu">
-        <li>    <input type="radio" id="gradeRadio" name="grade" value="1" ><label for="">Beginner</label></li>
-        <li>    <input type="radio" id="gradeRadio" name="grade" value="2" ><label for="">Intermediate</label></li>
-        <li>    <input type="radio" id="gradeRadio" name="grade" value="3" ><label for="">Advanced</label></li>
+        <li>    <input type="radio" id="gradeRadio" name="grade" value="2" ><label for="">2+</label></li>
+        <li>    <input type="radio" id="gradeRadio" name="grade" value="3" ><label for="">3+</label></li>
+        <li>    <input type="radio" id="gradeRadio" name="grade" value="4" ><label for="">4+</label></li>
       </ul>
     </div>
     </td >
@@ -55,9 +55,9 @@
         &nbsp; &nbsp;<button style="width: auto;height: auto; background-color: #f04c26;" class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"><b style="font-size:30px;">Climb Rating &nbsp;</b>
         <span  style="font-size:30px;" class="caret"></span></button>
         <ul style="width: 100%;height: auto;" class="dropdown-menu">
-          <li>    <input type="radio" id="gradeRadio" name="rating" value="1" ><label for="">Beginner</label></li>
-          <li>    <input type="radio" id="gradeRadio" name="rating" value="2" ><label for="">Intermediate</label></li>
-          <li>    <input type="radio" id="gradeRadio" name="rating" value="3" ><label for="">Advanced</label></li>
+          <li>    <input type="radio" id="gradeRadio" name="rating" value="15" ><label for="">15+</label></li>
+          <li>    <input type="radio" id="gradeRadio" name="rating" value="20" ><label for="">20+</label></li>
+          <li>    <input type="radio" id="gradeRadio" name="rating" value="25" ><label for="">25+</label></li>
         </ul>
       </div>
       </td>
