--- a/GoClimbApp/Templates/Crags.html
+++ b/GoClimbApp/Templates/Crags.html
@@ -45,12 +45,12 @@
 
     <div id="googleMap" style="width:100%;height:600px;"></div>
     <script>
+      //this function displays the map 
       function myMap() {
         let btn = document.getElementById("btn");
         btn.addEventListener('click', event => {
           let location_name = document.getElementById('location_name'); 
-          console.log(location_name.value);
-          console.log('here');
+          // gets the location entered by the user and stores it in a variable
           if (location_name.value === 'Mt Keira'){
             var mapProp = {
               center: new google.maps.LatLng(-34.402798882401214, 150.85642735920308),
@@ -58,7 +58,7 @@
               
             };
             var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
-            // The marker, positioned at Uluru
+            // The marker, positioned at mt Keira 
           const marker = new google.maps.Marker({
             position: new google.maps.LatLng(-34.402798882401214, 150.85642735920308),
             map: map,
