--- a/GoClimbApp/Templates/Crags1.html
+++ b/GoClimbApp/Templates/Crags1.html
@@ -44,7 +44,9 @@
 
     <div id="googleMap" onLoad="myMap()" style="width:100%;height:450px;"></div>
     <script>
+      //this function displays the map 
       function myMap() {
+        // gets the location entered by the user and stores it in a variable
         let location_name = document.getElementById('location_name'); 
         var mapProp = {
           center: new google.maps.LatLng(-34.402798882401214, 150.85642735920308),
@@ -52,7 +54,7 @@
           
         };
         var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
-        // The marker, positioned at Uluru
+        // The marker, positioned at mt Keira 
       const marker = new google.maps.Marker({
         position: new google.maps.LatLng(-34.402798882401214, 150.85642735920308),
         map: map,
