--- a/GoClimbApp/Templates/Crags1.html
+++ b/GoClimbApp/Templates/Crags1.html
@@ -69,8 +69,7 @@
           <td><img style="padding:20px ;" src="{% static 'images\warning.png' %}" alt="warning" ></td>
           <td style="padding:10px;text-align:center;background-color: black;color: #f04c26;margin:auto;border-radius: 15px;"><h3> Potential Hazards:
             <br>
-            {{windWarning}}
-            {{rainWarning}}
+            
           </td>
         </tr>
       </table>
@@ -99,6 +98,9 @@
               src="http://openweathermap.org/img/w/{{icon}}.png" alt="Image" style="width:70px"></h4>
           <h4><span class="badge badge-primary">Description : </span> {{description}}</h4>
           <h4><span class="badge badge-primary">Wind Speed :</span> {{wind}}</h4>
+          <h4>{{windWarning}}</h4>
+          <h4>{{rainWarning}}</h4>
+          <h4>{{RainForecasted}}</h4>
 
         </div>
 
