--- a/GoClimbApp/Templates/Crags1.html
+++ b/GoClimbApp/Templates/Crags1.html
@@ -87,6 +87,11 @@
  
   <br> <br>
 
+    
+    
+    
+    <!-- Mehrin's Comment: Access the python weather variables from Views.py Crags1 class-->
+    <!-- Mehrin's Comment: The values are being displayed in HTML alongside attribute names describing the value-->
   <div class="row">
       <div class="col d-flex justify-content-center">
         <div class=" card text-white bg-light mb-6">
@@ -98,6 +103,12 @@
               src="http://openweathermap.org/img/w/{{icon}}.png" alt="Image" style="width:70px"></h4>
           <h4><span class="badge badge-primary">Description : </span> {{description}}</h4>
           <h4><span class="badge badge-primary">Wind Speed :</span> {{wind}}</h4>
+            
+            
+            
+          <!-- Mehrin's Comment: the following values only appear if certain conditions of the control flow statements are fullfiled-->
+          <!-- Mehrin's Comment: the values below are potential hazard warning and only fire wher there is an extreme weather-->
+
           <h4>{{windWarning}}</h4>
           <h4>{{rainWarning}}</h4>
           <h4>{{RainForecasted}}</h4>
